--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -13,5 +13,9 @@
           android:title="Les Sorties du mois"
           android:icon="@drawable/ic_sneakers"/>
 
+    <item android:id="@+id/contact"
+        android:title="Contact"
+        android:icon="@drawable/ic_back"/>
+
 
 </menu>
