--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -145,7 +145,7 @@
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
                         android:layout_weight="1"
-                        android:background="@drawable/custom_cardview">
+                        android:background="#00000000">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
@@ -166,12 +166,12 @@
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
                         android:layout_weight="1"
-                        android:background="@drawable/custom_cardview">
+                        android:background="#00000000">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:background="@drawable/custom_cardview">
+                            android:background="#00000000">
 
                             <TextView
                                 android:id="@+id/textView4"
@@ -179,7 +179,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerInParent="true"
                                 android:layout_centerVertical="true"
-                                android:background="@drawable/custom_cardview"
+                                android:background="#00000000"
                                 android:text="Mai 2020" />
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
