--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,6 +8,7 @@
             android:id="@+id/nav_contact"
             android:title="Nous Contacter" />
 
+
     </group>
 
 
@@ -18,6 +19,10 @@
                 <item
                     android:id="@+id/nav_login"
                     android:title="Se Connecter" />
+
+                <item
+                    android:id="@+id/nav_signup"
+                    android:title="S'inscrire"/>
 
                 <item
                     android:id="@+id/nav_profil"
