--- a/app/src/main/res/drawable/bottomnavigation.xml
+++ b/app/src/main/res/drawable/bottomnavigation.xml
@@ -2,9 +2,9 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:color="@android:color/white"
-          android:state_selected="true" />
-
-    <item android:color="@android:color/black"
           android:state_selected="false" />
+
+    <item android:color="#e26198"
+          android:state_selected="true" />
 
 </selector>
