--- a/app/src/main/res/layout/activity_avril2020_resume.xml
+++ b/app/src/main/res/layout/activity_avril2020_resume.xml
@@ -43,10 +43,11 @@
         app:menu="@menu/menu_bottom" />
 
 
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_above="@+id/bottom_navigation"
+            android:layout_marginBottom="0dp">
 
 
             <androidx.appcompat.widget.Toolbar
