--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -150,6 +150,7 @@
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
                         android:layout_weight="1"
+                        app:cardBackgroundColor="#fafafa"
                         android:background="#00000000">
 
                         <RelativeLayout
@@ -171,7 +172,7 @@
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
                         android:layout_weight="1"
-                        android:background="#00000000">
+                        app:cardBackgroundColor="#00000000">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
