--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -98,19 +98,63 @@
                 app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
                 <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="180dp"
+                    android:layout_marginBottom="16dp"
+                    android:fontFamily="@font/ubuntu_bold"
+                    android:gravity="center_horizontal"
+                    android:text="Besoin de nous contacter ?"
+                    android:textAlignment="center"
+                    android:textColor="#ffa1bd"
+                    android:textSize="20sp"
+                    app:layout_constraintBottom_toTopOf="@+id/textView7"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
                     android:fontFamily="@font/ubuntu_light"
                     android:gravity="center_horizontal"
-                    android:text="Bientôt disponible"
+                    android:text="Alors laisse nous un message sur le PlayStore ou envoie nous un mail"
                     android:textAlignment="center"
-                    android:textColor="#FFA1BD"
-                    android:textSize="60sp"
+                    android:textColor="#ffa1bd"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toTopOf="@+id/btn_mail"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <Button
+                    android:id="@+id/btn_mail"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/custom_button"
+                    android:text="Envoyer un message"
+                    android:textColor="#ffa1bd"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="24dp"
+                    android:fontFamily="@font/ubuntu_bold"
+                    android:gravity="center_horizontal"
+                    android:text="L'équipe KickShop"
+                    android:textAlignment="center"
+                    android:textColor="#ffa1bd"
+                    android:textSize="14sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toStartOf="parent" />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
