--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:navigationIcon="@drawable/ic_back"
             tools:ignore="MissingConstraints">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,6 +35,8 @@
                     android:id="@+id/textView10"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginLeft="50dp"
                     android:layout_marginEnd="50dp"
                     android:layout_marginRight="50dp"
                     android:fontFamily="@font/ubuntu_bold"
@@ -87,18 +88,18 @@
         android:transitionName="logo_desc"/>
 
 
-<!--Pseudo-->
+<!--email-->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/username"
-            android:hint="Pseudo"
+            android:id="@+id/email"
+            android:hint="Adresse mail"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
                 android:transitionName="pseudo_tran"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -123,26 +124,35 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <CheckBox
-            android:id="@+id/checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rester connecté"
-            android:fontFamily="@font/ubuntu_light"
-            android:textSize="14sp"
-            android:layout_marginTop="15dp"/>
+            <CheckBox
+                android:id="@+id/checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/go_button"
+                android:layout_alignParentTop="true"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:fontFamily="@font/ubuntu_light"
+                android:text="Rester connecté"
+                android:textSize="14sp" />
 <!--Mot de passe oublié-->
-        <Button
-            android:id="@+id/lost_password"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:background="#00000000"
-            android:text="Mot de passe oublié ?"
-            android:fontFamily="@font/ubuntu_light"
-            android:elevation="0dp"
-            android:layout_margin="5dp"
-            android:layout_toRightOf="@+id/checkbox"
-            android:transitionName="lostpassword_tran"/>
+            <Button
+                android:id="@+id/lost_password"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_toRightOf="@+id/checkbox"
+                android:background="#00000000"
+                android:elevation="0dp"
+                android:fontFamily="@font/ubuntu_light"
+                android:text="Mot de passe oublié ?"
+                android:transitionName="lostpassword_tran" />
 <!--GO-->
         <Button
             android:id="@+id/go_button"
