--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -22,7 +22,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:navigationIcon="@drawable/ic_back"
             tools:ignore="MissingConstraints">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -36,6 +35,8 @@
                     android:id="@+id/textView10"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginLeft="50dp"
                     android:layout_marginEnd="50dp"
                     android:layout_marginRight="50dp"
                     android:fontFamily="@font/ubuntu_bold"
@@ -181,6 +182,7 @@
                 </LinearLayout>
                 <!--Go-->
                 <Button
+                    android:onClick="ShowPopUp"
                     android:id="@+id/reg_go_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
