--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,6 +87,11 @@
         android:fontFamily="@font/ubuntu_light"
         android:transitionName="logo_desc"/>
 
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
 
 <!--email-->
         <com.google.android.material.textfield.TextInputLayout
