--- a/app/src/main/res/layout/activity_avril2020.xml
+++ b/app/src/main/res/layout/activity_avril2020.xml
@@ -28,19 +28,7 @@
                 tools:layout_editor_absoluteX="72dp"
                 tools:layout_editor_absoluteY="9dp">
 
-                <ImageButton
-                    android:id="@+id/imageButton"
-                    android:layout_width="50dp"
-                    android:layout_height="0dp"
-                    android:background="#fafafa"
-                    android:baselineAlignBottom="false"
-                    android:gravity="center_horizontal"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.0"
-                    app:srcCompat="@drawable/ic_download"
-                    tools:ignore="VectorDrawableCompat" />
+
 
                 <ImageButton
                     android:id="@+id/imageButton2"
@@ -58,15 +46,17 @@
                     android:id="@+id/textView10"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
+                    android:layout_marginEnd="50dp"
+                    android:layout_marginRight="50dp"
+                    android:background="#fafafa"
                     android:fontFamily="@font/ubuntu_bold"
                     android:gravity="center|center_horizontal"
                     android:text="Avril 2020"
                     android:textAlignment="center"
-                    android:background="#fafafa"
                     android:textColor="#FFA1BD"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/imageButton"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageButton2"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.0" />
