--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -172,12 +172,13 @@
                         android:layout_height="match_parent"
                         android:layout_margin="5dp"
                         android:layout_weight="1"
-                        app:cardBackgroundColor="#00000000">
+                        app:cardBackgroundColor="#fafafa"
+                        android:background="#00000000">
 
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:background="#00000000">
+                            android:background="#fafafa">
 
                             <TextView
                                 android:id="@+id/textView4"
@@ -185,7 +186,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerInParent="true"
                                 android:layout_centerVertical="true"
-                                android:background="#00000000"
+                                android:background="#fafafa"
                                 android:text="Mai 2020" />
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
